--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -10,7 +10,8 @@
   <input type="text" name="last_name" placeholder="{{ user.last_name }}">
   <label>Image URL</label>
   <input type="text" name="image_url" placeholder="{{ user.image_url }}">
-  <button>Add</button>
+  <button>Cancel</button>
+  <button>Save</button>
 </form>
 
 {% endblock %}
