--- a/templates/user_listing.html
+++ b/templates/user_listing.html
@@ -8,6 +8,9 @@
   <li><a href='/{{ user.id }}'></a>{{ user.first_name }} {{ user.last_name }}</li>
   {% endfor %}
 </ul>
-<button>Add user</button>
+
+<form action="/users/new">
+  <button>Add user</button>
+</form>
 
 {% endblock %}
