--- a/templates/user_listing.html
+++ b/templates/user_listing.html
@@ -5,7 +5,7 @@
 <h1>Users</h1>
 <ul>
   {% for user in users %}
-  <li><a href='/{{ user.id }}'></a>{{ user.first_name }} {{ user.last_name }}</li>
+  <li><a href='/users/{{ user.id }}'>{{ user.first_name }} {{ user.last_name }}</a></li>
   {% endfor %}
 </ul>
 
