--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -4,8 +4,13 @@
 
 <img src="{{ user.image_url }}" alt="Profile Pic">
 <h1>{{ user.first_name }} {{ user.last_name }}</h1>
-<button>Edit</button>
-<button>Delete</button>
+
+<form action="/users/{{ user.id }}/edit">
+  <button>Edit</button>
+</form>
+<form action="/users/{{ user.id }}/delete" method="POST">
+  <button>Delete</button>
+</form>
 
 
 {% endblock %}
