--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -3,15 +3,17 @@
 {% block content %}
 
 <h1>Edit a user</h1>
-<form action="" method="POST">
+<form action="/users/{{ user.id }}/edit" method="POST">
   <label>First Name</label>
-  <input type="text" name="first_name" placeholder="{{ user.first_name }}">
+  <input type="text" name="first_name" value="{{ user.first_name }}">
   <label>Last Name</label>
-  <input type="text" name="last_name" placeholder="{{ user.last_name }}">
+  <input type="text" name="last_name" value="{{ user.last_name }}">
   <label>Image URL</label>
-  <input type="text" name="image_url" placeholder="{{ user.image_url }}">
-  <button>Cancel</button>
+  <input type="text" name="image_url" value="{{ user.image_url }}">
   <button>Save</button>
+</form>
+<form action="/users/{{ user.id }}">
+  <button>Cancel</button>
 </form>
 
 {% endblock %}
