--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -3,11 +3,12 @@
 {% block content %}
 
 <h1>Users</h1>
-<form action="" method="POST">
+<!--Testing that add user form appears-->
+<form action="/users/new" method="POST">
   <label>First Name</label>
-  <input type="text" name="first_name" placeholder="Enter a first name">
+  <input type="text" name="first_name" placeholder="Enter a first name" required>
   <label>Last Name</label>
-  <input type="text" name="last_name" placeholder="Enter a last name">
+  <input type="text" name="last_name" placeholder="Enter a last name" required>
   <label>Image URL</label>
   <input type="text" name="image_url" placeholder="Provide an image of this user">
   <button>Add</button>
