created tests and url boolean logic

--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<!-- Testing: User Detail -->
 <img src="{{ user.image_url }}" alt="Profile Pic">
 <h1>{{ user.first_name }} {{ user.last_name }}</h1>
 
