--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -3,11 +3,14 @@
 {% block content %}
 
 <h1>Edit a user</h1>
+{% for message in get_flashed_messages() %}
+  <p>{{ message }}</p>
+{% endfor %}
 <form action="/users/{{ user.id }}/edit" method="POST">
   <label>First Name</label>
-  <input type="text" name="first_name" value="{{ user.first_name }}">
+  <input type="text" name="first_name" value="{{ user.first_name }}" required>
   <label>Last Name</label>
-  <input type="text" name="last_name" value="{{ user.last_name }}">
+  <input type="text" name="last_name" value="{{ user.last_name }}" required>
   <label>Image URL</label>
   <input type="text" name="image_url" value="{{ user.image_url }}">
   <button>Save</button>
