--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -5,7 +5,8 @@
 <!-- Testing: User Detail -->
 <img src="{{ user.image_url }}" alt="Profile Pic">
 <h1>{{ user.first_name }} {{ user.last_name }}</h1>
-
+<!-- Make the edit feature a link that looks like a button -->
+<!-- can also define button method/action on button -->
 <form action="/users/{{ user.id }}/edit">
   <button>Edit</button>
 </form>
