--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -15,8 +15,11 @@
   <input type="text" name="image_url" value="{{ user.image_url }}">
   <button>Save</button>
 </form>
+
 <form action="/users/{{ user.id }}">
   <button>Cancel</button>
 </form>
 
+<!-- can style the cancel button styled like a button but make it a link
+Buttons that are just clicks can be links. Don't have to make a second form -->
 {% endblock %}
