--- a/templates/user_listing.html
+++ b/templates/user_listing.html
@@ -9,6 +9,7 @@
   {% endfor %}
 </ul>
 
+<!-- can make this a link styled as a button -->
 <form action="/users/new">
   <button>Add user</button>
 </form>
