--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -20,8 +20,10 @@
     <li><a href='/posts/{{ post.id }}'>{{ post.title }}</a></li>
   {% endfor %}
 </ul>
-<button method="GET" action="">Add Post</button>
 
+<form method="GET" action="/users/{{ user.id }}/posts/new">
+  <button>Add Post</button>
+</form>
 
 
 {% endblock %}
