made foreign key in tables nullable=false and made routes for post details

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -11,7 +11,7 @@
 <!-- Buttons -->
 <form method="GET">
   <button formaction="">Cancel</button>
-  <button formaction="" >Edit</button>
+  <button formaction="/posts/{{ post.id }}/edit" >Edit</button>
   <button formaction="" formmethod="POST">Delete</button>
 </form>
 
